=======
CHANGES
=======

0.9.2 (unreleased)
------------------

- Added sorting (``cssClassSortedOn`` and ``getCSSSortClass``) CSS options

- Added cell highlight (``getCSSHighlightClass``) CSS option


0.9.1 (2011-08-03)
------------------

- Fixed SelectedItemColumn.update when just one item was selected


0.9.0 (2010-08-09)
------------------

- Added ``EMailColumn`` which can be used to display mailto links.

- Fixed the default BatchProvider not to lose table sorting query arguments
  from the generated links; now batching and sorting play with each other
  nicely.

- Split single doctest file (README.txt) into different files


0.8.1 (2010-07-31)
------------------

- Added translation for the link title in the column header of the
  sortable table.


0.8.0 (2009-12-29)
------------------

- Added translation for ``LinkColumn.linkContent``.

- Added ``I18nGetAttrColumn`` which translates its content.


0.7.0 (2009-12-29)
------------------

- Allow to initialze the column definitions without requiring an
  entire table update.

- Fixed tests, so they no longer use ``zope.app.container`` (which was
  even not declared as test dependency).

- Head cell contents are now translated.

0.6.1 (2009-02-22)
------------------

- Be smart to not ``IPhysicallyLocatable`` objects if we lookup the
  ``__name__`` value in columns.


0.6.0 (2008-11-12)
------------------

- Bugfix: Allow to switch the sort order on the header link. This was
  blocked to descending after the first click

- Bugfix: CheckBoxColumn, ensure that we allways use a list for compare
  selected items. It was possible that if only one item get selected
  we compared a string. If this string was a sub string of another existing
  item the other item get selected too.

- Moved advanced batching implementation into z3c.batching

- Implemented GetAttrFormatterColumn. This column can be used for simple
  value formatting columns.

- Bad typo in columns.py: Renamed ``getLinkConent`` to ``getLinkContent``
